--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@ body {
     color: white;
     font-family: Arial, sans-serif;
     margin: 0;
+    padding: 0;
+    height: 100vh;
     overflow-x: hidden;
-}
-
-.SWEET_TV{
     background-color: #182936;
     width: 100%;
+}
+.Log_in{
+  color: #fff;
 }
 .interface{
     background-color: black;
@@ -321,86 +323,43 @@ h4,h1{
     width: 40px;
     height: 40px;
 }
-@media (max-width: 1024px) {
-  .content {
-    padding-left: 60px;
-    max-width: 50%;
-    margin: 150px 50px;
-  }
+
+
+/* Стилі для футера */
+.footer {
+  padding: 30px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
-/* Плавна адаптація для планшетів */
-@media (max-width: 1024px) {
-  .content {
-    margin: 120px 30px;
-  }
-
-  .tv-screen img {
-    width: 90%;
-    max-width: 500px;
-  }
-
-  .device {
-    padding: 20px 10px;
-  }
+/* Колонки футера */
+.column {
+  margin: 10px;
 }
 
-/* Плавна адаптація для мобільних */
-@media (max-width: 768px) {
-  .content h1 {
-    font-size: 48px;
-  }
-
-  .content {
-    margin: 100px 20px;
-    padding-left: 20px;
-  }
-
-  .content button {
-    font-size: 16px;
-    padding: 12px 25px;
-  }
-
-  .tv-screen img {
-    width: 80%;
-    max-width: 400px;
-  }
-
-  .device {
-    flex-direction: column;
-    gap: 20px;
-  }
-
-  .m2__family-block {
-    font-size: 22px;
-    height: auto;
-  }
+.column a {
+  color: #b0bec5;
+  display: block;
+  margin: 5px 0;
 }
 
-/* Адаптація для дуже маленьких екранів */
-@media (max-width: 480px) {
-  .content h1 {
-    font-size: 36px;
-  }
+/* Ефект при наведенні */
+.column a:hover {
+  color: white;
+} 
 
-  .content {
-    margin: 80px 15px;
-    padding-left: 10px;
-  }
-
-  .content button {
-    font-size: 14px;
-    padding: 10px 20px;
-  }
-
-  .tv-screen img {
-    width: 90%;
-    max-width: 300px;
-  }
-
-  .m2__family-block {
-    font-size: 18px;
-    padding: 20px;
+/* На экранах шириной 992 пикселя или меньше цвет фона синий */
+@media screen and (max-width: 992px) {
+  body {
+    background-color: rgb(9, 9, 39);
+    color: white;
   }
 }
-
+/* На экранах шириной 600 пикселей или меньше цвет фона оливковый */
+@media screen and (max-width: 600px) {
+  body {
+    background-color: rgb(63, 82, 255);
+    color: white;
+  }
+}
