--- a/styles/style.css
+++ b/styles/style.css
@@ -6,12 +6,14 @@ body {
     color: white;
     font-family: Arial, sans-serif;
     margin: 0;
+    padding: 0;
+    height: 100vh;
     overflow-x: hidden;
-}
-
-.SWEET_TV{
     background-color: #182936;
     width: 100%;
+}
+.Log_in{
+  color: #fff;
 }
 .interface{
     background-color: black;
@@ -106,6 +108,13 @@ body {
     height: 10px;
 }
 }
+ 
+.content {
+    padding-left: 60px;
+    max-width: 50%;
+    margin: 150px 50px;
+  }
+
 
   .content h1 {
     font-size: 60px;
@@ -314,10 +323,43 @@ h4,h1{
     width: 40px;
     height: 40px;
 }
-@media (max-width: 1024px) {
-  .content {
-    padding-left: 60px;
-    max-width: 50%;
-    margin: 150px 50px;
+
+
+/* Стилі для футера */
+.footer {
+  padding: 30px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+/* Колонки футера */
+.column {
+  margin: 10px;
+}
+
+.column a {
+  color: #b0bec5;
+  display: block;
+  margin: 5px 0;
+}
+
+/* Ефект при наведенні */
+.column a:hover {
+  color: white;
+} 
+
+/* На экранах шириной 992 пикселя или меньше цвет фона синий */
+@media screen and (max-width: 992px) {
+  body {
+    background-color: rgb(9, 9, 39);
+    color: white;
+  }
+}
+/* На экранах шириной 600 пикселей или меньше цвет фона оливковый */
+@media screen and (max-width: 600px) {
+  body {
+    background-color: rgb(63, 82, 255);
+    color: white;
   }
 }
